# seadir

./: .gitignore  LICENSE  README.md  README.rst  requirements.txt  setup.cfg
seadir/: __init__.py  config.py  shell.py
seadir/commands/: directory.py  responses.py
seadir/model/: phonenumber.py  responses.py
