[metadata]
name = seadir
summary = SEA Student Directory Utility
description-file =
    README.rst
author = Mike McCallister
author-email = mike@mccllstr.com
home-page = https://github.com/mikemccllstr/seadir
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    seadir
    cliffuni

[entry_points]
console_scripts =
    seadir = seadir.shell:main

seadir.commands =
    res-dump = seadir.commands.responses:Dump
    res-clean = seadir.commands.responses:Clean
    res-validate = seadir.commands.responses:Validate

    dir-generate = seadir.commands.directory:Generate

cliff.formatter.list =
    unicsv = cliffuni.formatters:UniCsvFormatter

cliff.formatter.show =
    unicsv = cliffuni.formatters:UniCsvFormatter
